Remove terrible advice